...
                    android:src="@drawable/ic_share_white_24dp"
                    android:tint="@color/colorAccent" />

                <ImageView
                    android:layout_marginRight="@dimen/detailsActionBarIconMargin"
                    android:layout_marginLeft="@dimen/detailsActionBarIconMargin"
                    android:id="@+id/detailsIsFavoriteIcon"
                    android:layout_width="@dimen/detailsActionBarIconSize"
                    android:layout_height="@dimen/detailsActionBarIconSize"
                    android:contentDescription="@string/detailsIsFavoriteIconDescription"
                    android:src="@drawable/ic_favorite_border_white_24dp"
                    android:tint="@color/colorAccent" />

...
